--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "build:webpack": "cross-env NEXT_PRIVATE_SKIP_TURBO=1 next build",
+    "build": "set NEXT_PRIVATE_SKIP_TURBO=1 && next build",
     "start": "next start",
     "lint": "eslint"
   },
